--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,5 @@ jdk:
 
 sudo: false
 
-script: "mvn cobertura:cobertura"
-
-after_success:
-- bash <(curl -s https://codecov.io/bash)
+notifications:
+  slack: piccritic:FMcdf3bMNpPc8RBufZhDk9uJ
