Add javadoc and setup travis for testing of db
Authors: Damien Robichaud and Ryan Lowe
added some more tests and refactored some code. Added the
database script to make it easy to install the database schema.
Added JavaDoc.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,12 @@ sudo: false
 
 notifications:
   slack: piccritic:FMcdf3bMNpPc8RBufZhDk9uJ
+
+env:
+- JDBC_DATABASE_URL=localhost:postgres
+
+services:
+- postgresql
+
+before_script:
+- psql < ./database/User.sql -U postgres
