--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ notifications:
   slack: piccritic:FMcdf3bMNpPc8RBufZhDk9uJ
 
 env:
-- JDBC_DATABASE_URL=localhost:postgres
+- JDBC_DATABASE_URL=jdbc:postgresql://localhost:5432/postgres?user=postgres
 
 services:
 - postgresql
