--- a/website/pom.xml
+++ b/website/pom.xml
@@ -77,6 +77,12 @@
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+    		<groupId>com.vaadin</groupId>
+    		<artifactId>vaadin-testbench</artifactId>
+    		<version>4.2.0</version>
+    		<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
