--- a/website/pom.xml
+++ b/website/pom.xml
@@ -83,6 +83,11 @@
     		<version>4.2.0</version>
     		<scope>test</scope>
 		</dependency>
+		<dependency>
+  			<groupId>org.vaadin.addons</groupId>
+   			<artifactId>tokenfield</artifactId>
+  			<version>7.0.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -232,6 +237,10 @@
 					<snapshots>
 						<enabled>true</enabled>
 					</snapshots>
+				</repository>
+				<repository>
+   					<id>vaadin-addons</id>
+   					<url>http://maven.vaadin.com/vaadin-addons</url>
 				</repository>
 			</repositories>
 			<pluginRepositories>
